--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.6.0",
     "connected-react-router": "^6.8.0",
     "dotenv": "^8.2.0",
+    "ethers": "^5.5.1",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "history": "^4.10.1",
     "immutable": "^4.0.0-rc.12",
+    "ipfs-http-client": "^53.0.1",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -34,7 +37,9 @@
     "reselect": "^4.0.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "web3": "^1.6.0",
+    "web3modal": "^1.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
