--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@project-serum/anchor": "^0.14.0",
+    "@solana/wallet-adapter-base": "^0.5.2",
+    "@solana/wallet-adapter-material-ui": "^0.11.0",
+    "@solana/wallet-adapter-react": "^0.11.0",
+    "@solana/wallet-adapter-wallets": "^0.9.0",
+    "@solana/spl-token": "^0.1.8",
+    "@solana/web3.js": "^1.30.2",
     "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.6.0",
@@ -42,7 +52,7 @@
     "web3modal": "^1.9.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3009 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
