--- a/package.json
+++ b/package.json
@@ -3,32 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@project-serum/anchor": "^0.14.0",
+    "@solana/spl-token": "^0.1.8",
     "@solana/wallet-adapter-base": "^0.5.2",
     "@solana/wallet-adapter-material-ui": "^0.11.0",
     "@solana/wallet-adapter-react": "^0.11.0",
     "@solana/wallet-adapter-wallets": "^0.9.0",
-    "@solana/spl-token": "^0.1.8",
     "@solana/web3.js": "^1.30.2",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.9",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/styled-components": "^5.1.15",
     "@walletconnect/web3-provider": "^1.6.6",
     "axios": "^0.20.0",
     "bootstrap": "^4.6.0",
     "connected-react-router": "^6.8.0",
     "dotenv": "^8.2.0",
-    "ethers": "^5.5.1",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
     "history": "^4.10.1",
-    "immutable": "^4.0.0-rc.12",
-    "ipfs-http-client": "^53.0.1",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -36,23 +39,17 @@
     "react-burger-menu": "^3.0.6",
     "react-dom": "^16.13.1",
     "react-focus-lock": "^2.5.2",
-    "react-redux": "^7.2.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-scroll-wheel-handler": "^2.1.0",
-    "redux": "^4.0.5",
-    "redux-immutable": "^4.0.0",
-    "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0",
     "socket.io-client": "^2.3.0",
     "styled-components": "^5.2.1",
-    "web-vitals": "^1.0.1",
-    "web3": "^1.6.0",
-    "web3modal": "^1.9.4"
+    "typescript": "^4.5.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "PORT=3009 react-scripts start",
+    "start": "PORT=3010 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
